--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
@@ -149,6 +149,8 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\blue-geometric.jpg" />
+    <Content Include="Content\Images\blue-rough.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
