--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
@@ -149,8 +149,11 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\blue-cyber.jpg" />
     <Content Include="Content\Images\blue-geometric.jpg" />
     <Content Include="Content\Images\blue-rough.jpg" />
+    <Content Include="Content\Images\green-cool.jpg" />
+    <Content Include="Content\Images\green-wave.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -217,6 +220,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Home\Generate.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
