everything is working except the transfer one

--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
@@ -220,7 +220,7 @@
     <Content Include="Views\Home\Account.cshtml" />
     <Content Include="Views\Home\Balance.cshtml" />
     <Content Include="Views\Home\Deposit.cshtml" />
-    <Content Include="Views\Home\Transfer.cshtml" />
+    <Content Include="Views\Home\Withdrawl.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
