working on the Transfer stuff

--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
@@ -191,6 +191,7 @@
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
     <Content Include="Scripts\popper.min.js" />
+    <Content Include="Scripts\transfer.js" />
     <Content Include="Scripts\umd\popper-utils.js" />
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
@@ -221,6 +222,7 @@
     <Content Include="Views\Home\Balance.cshtml" />
     <Content Include="Views\Home\Deposit.cshtml" />
     <Content Include="Views\Home\Withdrawl.cshtml" />
+    <Content Include="Views\Home\Transfer.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
