--- a/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
+++ b/PostGradWork/SampleATMProject/ATMProject/ATMProject/ATMProject.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Account.cs" />
     <Compile Include="Models\DataContext.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
