got the ajax stuff working, jsut gotta finish design

--- a/PostGradWork/GitHubAPITest/GitHubAPITest/GitHubAPITest/GitHubAPITest.csproj
+++ b/PostGradWork/GitHubAPITest/GitHubAPITest/GitHubAPITest/GitHubAPITest.csproj
@@ -143,6 +143,7 @@
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\commits_js.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
